php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #66893 imagescale ignore method argument
Submitted: 2014-03-12 14:30 UTC Modified: 2014-10-15 17:38 UTC
From: remi@php.net Assigned: remi (profile)
Status: Closed Package: GD related
PHP Version: 5.5.10 OS: GNU/LInux
Private report: No CVE-ID: None
 [2014-03-12 14:30 UTC] remi@php.net
Description:
------------
Working on reproducer for bug #66887:

When imagescale is called with a interpolation method argument, this one is ignored.



Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2014-03-12 14:37 UTC] remi@php.net
Automatic comment on behalf of remi
Revision: http://git.php.net/?p=php-src.git;a=commit;h=f2d5b2b6c657db29af3bc92d93645ff66574b56f
Log: Fixed Bug #66893i imagescale ignore method argument
 [2014-03-13 09:18 UTC] ab@php.net
Automatic comment on behalf of remi
Revision: http://git.php.net/?p=php-src.git;a=commit;h=f2d5b2b6c657db29af3bc92d93645ff66574b56f
Log: Fixed Bug #66893i imagescale ignore method argument
 [2014-03-13 09:20 UTC] ab@php.net
Automatic comment on behalf of remi
Revision: http://git.php.net/?p=php-src.git;a=commit;h=f2d5b2b6c657db29af3bc92d93645ff66574b56f
Log: Fixed Bug #66893i imagescale ignore method argument
 [2014-04-10 04:47 UTC] tyrael@php.net
Automatic comment on behalf of remi
Revision: http://git.php.net/?p=php-src.git;a=commit;h=f2d5b2b6c657db29af3bc92d93645ff66574b56f
Log: Fixed Bug #66893i imagescale ignore method argument
 [2014-10-15 17:38 UTC] remi@php.net
-Status: Open +Status: Closed -Assigned To: +Assigned To: remi
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC